update chức năng thêm, lấy và show list